--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ asgiref==3.11.1
 Django==6.0.2
 django-environ==0.13.0
 djangorestframework==3.16.1
+psycopg==3.3.3
 sqlparse==0.5.5
+typing_extensions==4.15.0
 tzdata==2025.3
